how dare things get outdated

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,15 +29,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+        uses: actions/checkout@main
+      - uses: actions/setup-python@main
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
       - run: python build.py -ll=3 -rc
       - name: Setup Pages
-        uses: actions/configure-pages@v1
+        uses: actions/configure-pages@main
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@main
         with:
           # do NOT Upload entire repository. bees
           path: 'build'
